# Game-Rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
game-bin/: Cargo.toml
game-bin/src/: main.rs
game-cfg/: Cargo.toml
game-cfg/src/: cli.rs  config.rs  errors.rs  file.rs  lib.rs  spec.rs
game-ecs/: Cargo.toml
game-ecs/src/: lib.rs  list.rs  spec.rs  system.rs
game-evt/: Cargo.toml
game-evt/src/: components.rs  errors.rs  event_loop.rs  handler.rs  lib.rs  spec.rs  system.rs
game-gfx/: Cargo.toml  build.rs
game-gfx-old/: build.rs
game-gfx-old/src/: lib.rs  spec.rs  system.rs
game-gfx-old/src/pipelines/: errors.rs
game-gfx-old/src/pipelines/triangle/: pipeline.rs
game-gfx-old/src/pipelines/triangle/shaders/spir-v/: vertex.spv
game-gfx-triangle/: Cargo.toml
game-gfx-triangle/src/: errors.rs  lib.rs  spec.rs  subsystem.rs
game-gfx/src/: components.rs  errors.rs  lib.rs  monitor.rs  spec.rs  system.rs  window.rs  windows.rs
game-gfx/src/pipelines/: errors.rs  mod.rs
game-gfx/src/pipelines/triangle/: components.rs  mod.rs  pipeline.rs  spec.rs  vertex.rs
game-gfx/src/pipelines/triangle/shaders/: .gitignore  mod.rs  shader.frag  shader.vert
game-gfx/src/subsystems/: mod.rs  spec.rs  triangle.rs
game-gfx/src/targets/: mod.rs  window.rs
game-ins/: Cargo.toml
game-ins/src/: main.rs
game-lst/: Cargo.toml
game-lst/src/: main.rs
game-pip/: Cargo.toml  build.rs
game-pip/src/: errors.rs  lib.rs  spec.rs
game-pip/src/square/: mod.rs  pipeline.rs  vertex.rs
game-pip/src/square/shaders/: shader.vert
game-pip/src/triangle/: mod.rs  pipeline.rs  vertex.rs
game-pip/src/triangle/shaders/: shader.frag
game-spc/: Cargo.toml
game-spc/src/: components.rs  lib.rs  spec.rs
game-sub/triangle/: Cargo.toml
game-sub/triangle/src/: errors.rs  lib.rs  pipeline.rs  spec.rs
game-tgt/: Cargo.toml
game-tgt/src/: errors.rs  lib.rs  spec.rs  window.rs
game-utl/: Cargo.toml
game-utl/src/: lib.rs  traits.rs
game-vk/: Cargo.toml
game-vk/src/: auxillary.rs  descriptors.rs  device.rs  errors.rs  flags.rs  framebuffer.rs  gpu.rs  instance.rs  layout.rs  lib.rs  pipeline.rs  queue.rs  render_pass.rs  shader.rs  spec.rs  surface.rs  swapchain.rs  sync.rs
game-vk/src/auxillary/: auxillary.rs  enums.rs  flags.rs  mod.rs  structs.rs
game-vk/src/image/: image.rs  mod.rs  view.rs
game-vk/src/pools/: errors.rs  mod.rs
game-vk/src/pools/command/: buffers.rs  mod.rs  pool.rs
game-vk/src/pools/memory/: allocators.rs  block.rs  buffers.rs  linear.rs  mod.rs  pool.rs  pools.rs  spec.rs  utils.rs
game-vk/src/pools/memory_old/: allocators.rs  mod.rs  pool.rs
game-win/: Cargo.toml
game-win/src/: components.rs  errors.rs  lib.rs  spec.rs  surface.rs  system.rs  window.rs
