[package]
name = "game-bin"
version = "0.1.0"
edition = "2021"
authors = [ "Lut99" ]

[[bin]]
name = "game"
path = "src/main.rs"

[dependencies]
log = "0.4.14"
rust-ecs = { git = "https://github.com/Lut99/rust-ecs", tag = "v1.0.0", features = ["log"] }
semver = "1.0.6"
simplelog = "0.11.2"
winit = "0.26.1"

game-cfg = { path = "../game-cfg" }
game-gfx = { path = "../game-gfx" }
