[package]
name = "game-cfg"
version = "0.1.0"
edition = "2021"
authors = [ "Lut99" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "3.1.6", features = ["derive"] }
# dirs-2 = "3.0.1"
log = { version = "0.4.14", features = ["std", "serde"] }
path-clean = "0.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
