[package]
name = "game-cfg"
version = "0.1.0"
edition = "2021"
authors = [ "Lut99" ]

[dependencies]
chrono = "0.4"
clap = { version = "3.1.6", features = ["derive"] }
log = { version = "0.4.14", features = ["std", "serde"] }
path-clean = "0.1.0"
rust-win = { git = "https://github.com/Lut99/rust-win", tag = "v2.1.6", features = ["log", "serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
