[package]
name = "game-gfx-triangle"
version = "0.1.0"
edition = "2021"
authors = [ "Lut99" ]

[dependencies]
log = "0.4.16"

game-ecs = { path = "../game-ecs" }
game-evt = { path = "../game-evt" }
game-vk = { path = "../game-vk" }
game-win = { path = "../game-win" }
game-gfx = { path = "../game-gfx" }
