[package]
name = "game-gfx"
version = "0.2.0"
edition = "2021"
authors = [ "Lut99" ]

[dependencies]
lazy_static = "1.4.0"
log = "0.4.16"
rust-ecs = { git = "https://github.com/Lut99/rust-game", tag = "v1.0.0", features = ["log"] }
rust-vk = { git = "https://github.com/Lut99/rust-game", tag = "v1.0.0", features = ["log", "winit"] }
rust-win = { git = "https://github.com/Lut99/rust-game", tag = "v1.0.0", features = ["log", "serde"] }
semver = "1.0.6"
winit = "0.26"

game-pip = { path = "../game-pip" }
game-tgt = { path = "../game-tgt" }
