[package]
name = "game-ins"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game-setup"
path = "src/main.rs"


[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
console = "0.15.1"
dialoguer = "0.10.2"
dirs = "4.0"
indicatif = "0.17.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking"] }
semver = "1.0.6"
