[package]
name = "game-tgt"
version = "0.1.0"
edition = "2021"
authors = [ "Lut99" ]

[dependencies]
log = "0.4.16"
rust-vk = { git = "https://github.com/Lut99/rust-game", features = ["log", "winit"] }
rust-win = { git = "https://github.com/Lut99/rust-game", features = ["log", "serde"] }
winit = "0.26"

game-utl = { path = "../game-utl" }
