[package]
name = "game-vk"
version = "0.1.0"
edition = "2021"
authors = [ "Lut99" ]



[dependencies]
ash = { version = "0.37.0", features = ["loaded"] }
log = "0.4.16"
num-traits = "0.2.15"
rust-embed = { version = "6.4.0" }
semver = "1.0.6"
winit = "0.26.1"

game-utl = { path = "../game-utl" }


[target.'cfg(all(windows))'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }


[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17.0"
cocoa = "0.18.4"
objc  = "0.2.5"
