[package]
name = "game-win"
version = "0.1.0"
edition = "2021"
authors = [ "Lut99" ]

[dependencies]
ash = "0.37.0"
log = "0.4.16"
winit = "0.26.1"

game-evt = { path = "../game-evt" }
game-vk = { path = "../game-vk" }

[target.'cfg(all(windows))'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17.0"
cocoa = "0.18.4"
objc  = "0.2.5"
