[package]
name = "game-win"
version = "0.1.0"
edition = "2021"
authors = [ "Lut99" ]

[dependencies]
log = "0.4.14"
winit = "0.26"

game-cfg = { path = "../game-cfg" }
game-ecs = { path = "../game-ecs" }
game-evt = { path = "../game-evt" }
game-spc = { path = "../game-spc" }
game-vk  = { path = "../game-vk" }
